<!-- HEADER/SUPER POM -->
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
<modelVersion>4.0.0</modelVersion>

	<!-- PROJECT ID SECTION/ PROJECT IDENTITY-->
	<groupId>com.randfacts</groupId>
	<artifactId>RandFacts</artifactId>
	<version>1.0-SNAPSHOT</version>

	<!-- PROPERTIES/MAVEN COMPILER SECTION-->
	<!-- openjdk 17 LTS maven compiler/java for long term support for the compiler -->
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<!-- <maven.compiler.source>17</maven.compiler.source> -->
		<maven.compiler.release>17</maven.compiler.release>
	</properties>

	<!-- DEPENDENCY SECTION -->
	<dependencies>

		<!-- JAVAFX CONTROLS DEPENDENCIES SECTION-->
		<!-- includes interactive elements from javafx framework like button and sliders-->
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>17.0.2</version>
		</dependency>

		<!-- JAVAFX DEPENDENCIES SECTION-->
		<!-- xml layout engine -->
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<version>17.0.2</version>
		</dependency>

		<!-- for gson -->
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.10.1</version>
		</dependency>

		<!-- for .env -->
		<dependency>
			<groupId>io.github.cdimascio</groupId>
			<artifactId>dotenv-java</artifactId>
			<version>3.0.0</version>
		</dependency>

		<!-- for jdbc driver -->
		<dependency>
			<groupId>org.xerial</groupId>
			<artifactId>sqlite-jdbc</artifactId>
			<version>3.45.3.0</version>
		</dependency>

		<!-- for background video -->
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-media</artifactId>
			<version>17.0.2</version>
		</dependency>

	</dependencies>

	<!-- PLUGINS FOR TO AUTO RUN DEPENDENCIES -->
	<build>
		<plugins>
			<plugin>
				<!-- javafx plugin to auto run javafx -->
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-maven-plugin</artifactId>
				<version>0.0.8</version>
					<configuration>
						<mainClass>com.randfacts.MainApp</mainClass>
						<options>
							<option>-Xmx2g</option>
							<option>--enable-native-access=javafx.graphics</option>
							<option>--enable-native-access=javafx.media</option>
							<option>--enable-native-access=ALL-UNNAMED</option>
						</options>
					</configuration>
			</plugin>
		</plugins>
	</build>
</project>



